moving the column

--- a/src/assets/scss/constants.scss
+++ b/src/assets/scss/constants.scss
@@ -3,6 +3,7 @@ $mainColorHover: #55b475;
 $SimplePageColor: #777777;
 $SimplePageHover: #3b3636;
 $SimplePageBackground: beige;
+$liteHover: greenyellow;
 
 
 
