--- a/src/assets/scss/constants.scss
+++ b/src/assets/scss/constants.scss
@@ -3,10 +3,9 @@ $mainColorHover: #55b475;
 $SimplePageColor: #777777;
 $SimplePageHover: #3b3636;
 $SimplePageBackground: beige;
-$liteHover: greenyellow;
-
-
-
+$liteHover: rgba(176,248,150, 0.4);
+$grey: #e9ecec;
+$darkGrey: #726d6d;
 
 $generalFontSize_px: 16px;
 $generalFontSize_number: 16;
